--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: 数据之美
 brief-intro: Bioinformatics Engineer
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+url: "https://rinlinux.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
