--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@ permalink: /:year/:month/:day/:title/
 
 # other links
 twitter_username: 
-facebook_username: 
-github_username:  
-email: 
-weibo_username: 
-zhihu_username: 
+facebook_username: Kubomixfruit
+github_username: Rinlinux
+email: mixfruitszu@gmail.com
+weibo_username: 张小凡_2010
+zhihu_username: 张小凡
 linkedIn_username: 
 dribbble_username:
 
@@ -28,8 +28,8 @@ description_footer: 本站记录生物信息笔记
 # comments
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
-duoshuo_shortname: #hygblog
-disqus_shortname: Linzheng
+# duoshuo_shortname: hygblog
+# disqus_shortname: Linzheng
 
 # statistic analysis 统计代码
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
@@ -62,4 +62,4 @@ excerpt_separator: "\n\n\n\n"
 
 # paginate
 gem: [jekyll-paginate]
-paginate: 6
+paginate: 5
