--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ zhihu_username: 张小凡
 linkedIn_username: 
 dribbble_username:
 
-description_footer: 本站记录生物信息笔记
+description_footer: 用来记录和分享自己的学习编程的经验和感悟。
 
 # comments
 # two ways to comment, only choose one, and use your own short name
